# auto48

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/commands/: estonian-language-check.md  meta-reasoning.md  ui-design.md  verify.md
.cursor/hooks/: README.md  check-readfile-secrets.sh  hooks.json
.cursor/prompts/: component-architecture-generator.md  cursor-system-prompt.md  security-analysis.md
.github/workflows/: ci.yml
.memspec/: .gitignore  config.yaml
.memspec/archive/: ms_01KSTAF67CJRTE7PNTNWHJXW7M.md  ms_01KSTC83BHYWEE87NRF0CRF11M.md
alembic/: env.py
alembic/versions/: 16909bf374c8_test_drive_bookings.py  3633e5a72a19_deposits_escrow.py  4746362ecd97_ev_fields_on_vehicles.py  abd0726bfcd2_initial_schema.py  f28b08ce30b2_phase_1b_dealer_feeds_billing_saved_.py
deploy/: .gitignore  deploy-app.sh  docker-compose.prod.yml  obtain-cert.sh  provision.sh  seed-mock-listings.py
docs/: agent-memory.md  architecture.md  deployment.md  feasibility.md  implementation-plan.md  product-scope.md
frontend/: nuxt.config.ts  package-lock.json  package.json
scripts/: seed_dev.py
tests/: conftest.py  test_auth.py  test_billing.py  test_config.py  test_dealer_analytics.py  test_escrow.py  test_ev.py  test_feeds.py  test_fraud.py  test_geo.py  test_health.py  test_import_calc.py  test_messaging.py  test_nl_search.py  test_photos.py  test_recommendations.py  test_saved_searches.py  test_search.py  test_stolen.py  test_tco.py  test_test_drives.py  test_valuation.py  test_vehicle_data.py
(+174 files in other folders)
