[project]
name = "auto48"
version = "0.1.0"
description = "auto48 — an open car-marketplace backend (auto24.ee competitor)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "structlog>=24.4",
    "httpx>=0.28",
    "pwdlib[argon2]>=0.2",
    "pyjwt>=2.9",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
    "boto3>=1.35",
    "arq>=0.26",
    "pillow>=11.0",
    "stripe>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto48"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["auto48"]

[tool.ruff.lint.per-file-ignores]
# conftest sets env vars before importing the app — imports must follow.
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
packages = ["auto48"]
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
